examples/test/testpolicy7058.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7058
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key14: value49
      key18: value43
      key30: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value9
          key38: value37
      podSelector:
        matchLabels:
          key16: value42
          key41: value42
          key47: value26
